<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView  android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_centerInParent="true"
    android:id="@+id/wallpaper_workspace"/>
    
    <LinearLayout   	  
  	    android:layout_alignParentBottom="true"  	    
  	    android:layout_width="match_parent"
    	android:layout_height="195dp"  	
    	android:orientation="vertical">
  	
  		<LinearLayout android:layout_width="match_parent"
    		android:layout_height="@dimen/apps_customize_edit_tab_bar_height"
    		android:background="@drawable/widget_title_bg"
    		android:paddingLeft="16dp"
   	 		android:orientation="horizontal">
   	 		   
       		<TextView
       	    android:id="@+id/settings_local_wallpaper_text"
        	android:layout_width="107dp"
        	android:layout_height="fill_parent"
        	android:textSize="14sp"
        	android:clickable="true"
        	android:gravity="center"
        	android:textColor="#f3f3f3"
        	android:background="@drawable/tab_selected_holo"
        	android:text="@string/local_wallpaper" />
       	
       	<View android:layout_width="17dp"
        	android:layout_height="fill_parent"/>
       	
       	 <TextView
       	    android:id="@+id/settings_pull_wallpaper_text"
        	android:layout_width="107dp"
        	android:layout_height="fill_parent"
        	android:textSize="14sp"
        	android:clickable="true"
        	android:gravity="center"
        	android:textColor="#f3f3f3"
        	android:visibility="gone"
        	android:text="@string/pulldown_wallpaper" />
        
    	</LinearLayout>
  
  		<LinearLayout android:layout_width="match_parent"
    		android:layout_height="108dp"
    		android:background="@drawable/page_bg"
    		android:orientation="vertical"
    		android:paddingLeft="12dp">
	
			<com.tcl.simpletv.launcher2.wallpaper.HorizontalListView
				android:id="@+id/wallpaper_listview"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:layout_marginTop="4dp"/>									
	
		</LinearLayout>
		
  	
  		<LinearLayout 
        	android:layout_width="fill_parent"
        	android:layout_height="48dp"
        	android:layout_marginTop="-5dp"
        	android:gravity="center_horizontal"
        	android:background="@drawable/page_bg">
                
        	<Button android:id="@+id/set"
      			android:layout_width="110dp"
        		android:layout_height="42dp"
        		android:text="@string/wallpaper_instructions"
        		android:textSize="15sp"
        		android:gravity="center" 
        		android:layout_gravity="center"/>
    	</LinearLayout> 	
	
	</LinearLayout>
        
        
</RelativeLayout>

